tests/rosetta/out/Haskell/arithmetic-geometric-mean-calculate-pi.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/arithmetic-geometric-mean-calculate-pi.hs:122:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/arithmetic-geometric-mean-calculate-pi.hs:117:1
                 /workspace/mochi/tests/rosetta/out/Haskell/arithmetic-geometric-mean-calculate-pi.hs:122:1
    |
122 | main = do
    | ^^^^
